force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/leaseworks__Aircraft_Base_Price__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_Aircraft Base Price</label>
    <nameField>
        <label>Aircraft Base Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_Aircraft Base Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>