force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__Airbus_Financing_Credit_Memorandum__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airbus_Financing_Credit_Memorandum__c</fullName>
    <label>Airbus Financing Credit Memorandum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>