force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__Aircraft_Net_Fly_Away_Price_with_BFE__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Net_Fly_Away_Price_with_BFE__c</fullName>
    <formula>leaseworks__Final_Aircraft_Price__c -  leaseworks__Estimated_Engine_Concession__c +  leaseworks__Space_Flex__c +  leaseworks__BFE_Standard_Budget__c +  leaseworks__SCN_Additional__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aircraft Net Fly Away Price with BFE</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>