force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__Airframe_Base_Price_DP_with_CFM__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airframe_Base_Price_DP_with_CFM__c</fullName>
    <formula>leaseworks__Total_Airframe_Basic_Price__c - leaseworks__Airframe_Credit_Memorandum__c - leaseworks__Fleet_Transition_Credit_Memorandum__c  - leaseworks__Promotion_Credit_Memorandum__c  - leaseworks__CFM_Engine_Credit__c -  leaseworks__Airbus_Financing_Credit_Memorandum__c - leaseworks__Engine_Financing_Credit_Memorandum__c +  leaseworks__SCN_Additional__c  + leaseworks__Space_Flex__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airframe Base Price (DP) with CFM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>