force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__Airframe_Base_Price_PDP_with_CFM__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airframe_Base_Price_PDP_with_CFM__c</fullName>
    <formula>leaseworks__Total_Airframe_Basic_Price__c +  leaseworks__SCN_Additional__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airframe Base Price (PDP) with CFM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>