force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__BFE_Estimate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__BFE_Estimate__c</fullName>
    <label>BFE Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>