force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__Engine_Basic_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Basic_Price__c</fullName>
    <label>Engine Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>