force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__Engines__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engines__c</fullName>
    <label>Engines</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>