force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__Final_Aircraft_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Final_Aircraft_Price__c</fullName>
    <formula>If ( RecordType.DeveloperName = &apos;Airbus&apos;,
leaseworks__Aircraft_Basic_Price__c  
-  leaseworks__Airframe_Credit_Memorandum__c - leaseworks__Fleet_Transition_Credit_Memorandum__c - leaseworks__Promotion_Credit_Memorandum__c - leaseworks__Airbus_Financing_Credit_Memorandum__c -  leaseworks__CFM_Engine_Credit__c - leaseworks__Engine_Financing_Credit_Memorandum__c

,  leaseworks__Total_Credits__c  +  leaseworks__Total_w_o_BFE_SPE__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Aircraft Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>