force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__Lease_Assistance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Assistance__c</fullName>
    <label>Lease Assistance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>