force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__Promotion_Credit_Memorandum__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Promotion_Credit_Memorandum__c</fullName>
    <label>Promotion Credit Memorandum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>