force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__Space_Flex__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Space_Flex__c</fullName>
    <label>Space Flex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>