force-app/main/default/objects/leaseworks__Aircraft_Base_Price__c/fields/leaseworks__Total_w_o_BFE_SPE__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_w_o_BFE_SPE__c</fullName>
    <formula>leaseworks__Engines__c +  leaseworks__Total_Airframe_Basic_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (w/o BFE/SPE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>